// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selection 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Schema Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div>
      <div
        class="jsx-3102962925"
      >
        ·heading·
      </div>
      <div
        class="jsx-1758464876"
      >
        ·paragraph·
      </div>
      <div
        class="jsx-44984361"
      >
        <div
          class="jsx-1758464876"
        >
          ·listitem·
        </div>
      </div>
      <img
        alt="Square placeholder image 80px"
        height="80"
        src="https://via.placeholder.com/80"
        width="80"
      />
    </div>
  </div>
  <pre
    style="height: 48px; overflow: auto;"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'type':'document','children':[{'type':'heading','style':{'font-size':'24px'},'children':['heading']},{'type':'paragraph','style':{'font-size':'16px'},'children':['paragraph']},{'type':'list','style':{'margin':'16px'},'children':[{'type':'listitem','style':{'font-size':'16px'},'children':['listitem']}]},{'type':'image','src':'https://via.placeholder.com/80','alt':'Square placeholder image 80px','width':80,'height':80}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]}}·
    </span>
    <br />
    <br />
  </pre>
  <button
    class="focus"
    disabled=""
    tabindex="0"
    type="button"
  >
    ·focus·
  </button>
  <button
    class="blur"
    tabindex="-1"
    type="button"
  >
    ·blur·
  </button>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
  </div>
</div>
`;

exports[`selection 2`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Schema Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div>
      <div
        class="jsx-3102962925"
      >
        ·heading·
      </div>
      <div
        class="jsx-1758464876"
      >
        ·paragraph·
      </div>
      <div
        class="jsx-44984361"
      >
        <div
          class="jsx-1758464876"
        >
          ·listitem·
        </div>
      </div>
      <img
        alt="Square placeholder image 80px"
        height="80"
        src="https://via.placeholder.com/80"
        width="80"
      />
    </div>
  </div>
  <pre
    style="height: 48px; overflow: auto;"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'type':'document','children':[{'type':'heading','style':{'font-size':'24px'},'children':['heading']},{'type':'paragraph','style':{'font-size':'16px'},'children':['paragraph']},{'type':'list','style':{'margin':'16px'},'children':[{'type':'listitem','style':{'font-size':'16px'},'children':['listitem']}]},{'type':'image','src':'https://via.placeholder.com/80','alt':'Square placeholder image 80px','width':80,'height':80}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[0,0,2]}}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'type':'document','children':[{'type':'heading','style':{'font-size':'24px'},'children':['heading']},{'type':'paragraph','style':{'font-size':'16px'},'children':['paragraph']},{'type':'list','style':{'margin':'16px'},'children':[{'type':'listitem','style':{'font-size':'16px'},'children':['listitem']}]},{'type':'image','src':'https://via.placeholder.com/80','alt':'Square placeholder image 80px','width':80,'height':80}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,2],"focus":[0,0,0]}}·
    </span>
    <br />
    <br />
  </pre>
  <button
    class="focus"
    disabled=""
    tabindex="0"
    type="button"
  >
    ·focus·
  </button>
  <button
    class="blur"
    tabindex="-1"
    type="button"
  >
    ·blur·
  </button>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
  </div>
</div>
`;

exports[`selection 3`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Schema Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div>
      <div
        class="jsx-3102962925"
      >
        ·heading·
      </div>
      <div
        class="jsx-1758464876"
      >
        ·paragraph·
      </div>
      <div
        class="jsx-44984361"
      >
        <div
          class="jsx-1758464876"
        >
          ·listitem·
        </div>
      </div>
      <img
        alt="Square placeholder image 80px"
        height="80"
        src="https://via.placeholder.com/80"
        width="80"
      />
    </div>
  </div>
  <pre
    style="height: 48px; overflow: auto;"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'type':'document','children':[{'type':'heading','style':{'font-size':'24px'},'children':['heading']},{'type':'paragraph','style':{'font-size':'16px'},'children':['paragraph']},{'type':'list','style':{'margin':'16px'},'children':[{'type':'listitem','style':{'font-size':'16px'},'children':['listitem']}]},{'type':'image','src':'https://via.placeholder.com/80','alt':'Square placeholder image 80px','width':80,'height':80}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[4]}}·
    </span>
    <br />
    <br />
  </pre>
  <button
    class="focus"
    disabled=""
    tabindex="0"
    type="button"
  >
    ·focus·
  </button>
  <button
    class="blur"
    tabindex="-1"
    type="button"
  >
    ·blur·
  </button>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
  </div>
</div>
`;

exports[`selection 4`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Schema Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color: rgb(238, 238, 238); margin-bottom: 24px; outline: none; padding: 8px; width: 300px;"
    tabindex="0"
  >
    <div>
      <div
        class="jsx-3102962925"
      >
        ·heading·
      </div>
      <div
        class="jsx-1758464876"
      >
        ·paragraph·
      </div>
      <div
        class="jsx-44984361"
      >
        <div
          class="jsx-1758464876"
        >
          ·listitem·
        </div>
      </div>
      <img
        alt="Square placeholder image 80px"
        height="80"
        src="https://via.placeholder.com/80"
        width="80"
      />
    </div>
  </div>
  <pre
    style="height: 48px; overflow: auto;"
  >
    <span
      style="color: rgb(136, 136, 136);"
      title="{'type':'document','children':[{'type':'heading','style':{'font-size':'24px'},'children':['heading']},{'type':'paragraph','style':{'font-size':'16px'},'children':['paragraph']},{'type':'list','style':{'margin':'16px'},'children':[{'type':'listitem','style':{'font-size':'16px'},'children':['listitem']}]},{'type':'image','src':'https://via.placeholder.com/80','alt':'Square placeholder image 80px','width':80,'height':80}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0,0],"focus":[4]}}·
    </span>
    <br />
    <br />
    <span
      style="color: rgb(136, 136, 136);"
      title="{'type':'document','children':[{'type':'heading','style':{'font-size':'24px'},'children':['heading']},{'type':'paragraph','style':{'font-size':'16px'},'children':['paragraph']},{'type':'list','style':{'margin':'16px'},'children':[{'type':'listitem','style':{'font-size':'16px'},'children':['listitem']}]},{'type':'image','src':'https://via.placeholder.com/80','alt':'Square placeholder image 80px','width':80,'height':80}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[4],"focus":[0,0,0]}}·
    </span>
    <br />
    <br />
  </pre>
  <button
    class="focus"
    disabled=""
    tabindex="0"
    type="button"
  >
    ·focus·
  </button>
  <button
    class="blur"
    tabindex="-1"
    type="button"
  >
    ·blur·
  </button>
  <div>
    <button
      class="select-first-two-letters"
      type="button"
    >
      ·select first two letters·
    </button>
    <button
      class="select-first-two-letters-backward"
      type="button"
    >
      ·select first two letters backward·
    </button>
    <button
      class="select-all"
      type="button"
    >
      ·select all·
    </button>
    <button
      class="select-all-backward"
      type="button"
    >
      ·select all backward·
    </button>
  </div>
</div>
`;
